--- a/TestDeployment.Website/appsettings.Development.json
+++ b/TestDeployment.Website/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TestConnection":  "<secret>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
