--- a/TestDeployment.Website/TestDeployment.Website.csproj
+++ b/TestDeployment.Website/TestDeployment.Website.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <UserSecretsId>62baaedc-1c7a-46fa-9353-ebec03d303c7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\</DockerfileContext>
-    <DockerfileFile>..\Dockerfile</DockerfileFile>
+    <DockerfileContext>.</DockerfileContext>
+    <DockerfileFile>..\website.Dockerfile</DockerfileFile>
   </PropertyGroup>
 
   <ItemGroup>
