--- a/TestDeployment.Website/Dockerfile
+++ b/TestDeployment.Website/Dockerfile
@@ -1,13 +1,14 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
 COPY ["TestDeployment.Website/TestDeployment.Website.csproj", "TestDeployment.Website/"]
+COPY ["TestDeployment.Database/TestDeployment.Database.csproj", "TestDeployment.Database/"]
 RUN dotnet restore "TestDeployment.Website/TestDeployment.Website.csproj"
 COPY . .
 WORKDIR "/src/TestDeployment.Website"
