work in progress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,23 +15,21 @@ services:
     ports:
       - "8000:80"
       - "8443:443"
-    environment:
-      DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=blogdb;username=bloguser;password=bloguser"
     networks:
       - testdeployment.website
   
   postgres_image:
     image: postgres:12.6
     ports:
-      - "5432"
+      - "5432:5432"
     restart: always
     volumes:
       - db_volume:/var/lib/postgresql/data
       - ./dbscripts/seed.sql :/docker-entrypoint-initdb.d/seed.sql
     environment:
-      POSTGRES_USER: "bloguser"
-      POSTGRES_PASSWORD: "bloguser"
-      POSTGRES_DB: "blogdb"
+      POSTGRES_DB: "testdeployment"
+      POSTGRES_USER: "testdeploymentuser"
+      POSTGRES_PASSWORD: "abracadabra1!"
     networks:
       - testdeployment.website
 volumes:
